# cot-explorer

./: .env.example  .gitignore  .mcp.json.template  .system-basics.template.json  CLAUDE.md  README.md  build_combined.py  build_price_history.py  build_timeseries.py  config.py  fetch_all.py  fetch_calendar.py  fetch_cot.py  fetch_fundamentals.py  fetch_prices.py  fred_client.py  index.html  indicator_scoring.py  indicators.py  levels.py  macro_output.py  price_fetchers.py  push_signals.py  pyproject.toml  scoring.py  sentiment.py  smc.py  trade_setup.py  update.sh
.claude/: settings.json
.claude/commands/: add-skill.md  add-source.md  sync-skills.md  update.md
.claude/rules/: coding-style.md  error-protocol.md  git-workflow.md  multi-tenant.md  permissions.md  testing.md  workflow.md
.claude/skills/: INDEX.md
.github/workflows/: ci.yml
css/: dashboard.css
data/: 2026-03-22.json
data/calendar/: latest.json
data/combined/: 2026-03-25.json  latest.json
data/disaggregated/: latest.json
data/fundamentals/: latest.json
data/legacy/: 2026-03-22.json
data/macro/: 2026-03-22.json  latest.json
data/prices/: audusd.json  brent.json  cocoa.json  coffee.json  corn.json  cot_map.json  dxy.json  eurusd.json  gbpusd.json  gold.json  nas100.json  silver.json  soybean.json  spx.json  sugar.json  usdjpy.json  wheat.json  wti.json
data/supplemental/: latest.json
js/: dashboard.js
scripts/: session-catchup.sh
tests/: conftest.py  test_config.py  test_indicators.py  test_levels.py  test_scoring.py  test_sentiment.py  test_trade_setup.py
(+1469 files in other folders)
