[project]
name = "cot-explorer"
version = "0.1.0"
requires-python = ">=3.9"
description = "CFTC COT trading dashboard with SMC analysis"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM"]
